// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for direction: "column" 1`] = `
":host {
  display: flex !important;
  flex: auto !important;
  width: auto !important;
  margin-left: calc(clamp(16px, 1.25vw + 12px, 36px) / -2) !important;
  margin-right: calc(clamp(16px, 1.25vw + 12px, 36px) / -2) !important;
  color-scheme: light dark !important;
  flex-direction: column !important;
  flex-wrap: wrap !important;
}
:host([hidden]) {
  display: none !important;
}"
`;

exports[`getComponentCss() should return correct css for direction: "column-reverse" 1`] = `
":host {
  display: flex !important;
  flex: auto !important;
  width: auto !important;
  margin-left: calc(clamp(16px, 1.25vw + 12px, 36px) / -2) !important;
  margin-right: calc(clamp(16px, 1.25vw + 12px, 36px) / -2) !important;
  color-scheme: light dark !important;
  flex-direction: column-reverse !important;
  flex-wrap: wrap !important;
}
:host([hidden]) {
  display: none !important;
}"
`;

exports[`getComponentCss() should return correct css for direction: "row" 1`] = `
":host {
  display: flex !important;
  flex: auto !important;
  width: auto !important;
  margin-left: calc(clamp(16px, 1.25vw + 12px, 36px) / -2) !important;
  margin-right: calc(clamp(16px, 1.25vw + 12px, 36px) / -2) !important;
  color-scheme: light dark !important;
  flex-direction: row !important;
  flex-wrap: wrap !important;
}
:host([hidden]) {
  display: none !important;
}"
`;

exports[`getComponentCss() should return correct css for direction: "row-reverse" 1`] = `
":host {
  display: flex !important;
  flex: auto !important;
  width: auto !important;
  margin-left: calc(clamp(16px, 1.25vw + 12px, 36px) / -2) !important;
  margin-right: calc(clamp(16px, 1.25vw + 12px, 36px) / -2) !important;
  color-scheme: light dark !important;
  flex-direction: row-reverse !important;
  flex-wrap: wrap !important;
}
:host([hidden]) {
  display: none !important;
}"
`;

exports[`getComponentCss() should return correct css for direction: {"base":"column","xs":"row","s":"column","m":"row","l":"column","xl":"row"} 1`] = `
":host {
  display: flex !important;
  flex: auto !important;
  width: auto !important;
  margin-left: calc(clamp(16px, 1.25vw + 12px, 36px) / -2) !important;
  margin-right: calc(clamp(16px, 1.25vw + 12px, 36px) / -2) !important;
  color-scheme: light dark !important;
  flex-direction: column !important;
  flex-wrap: wrap !important;
}
:host([hidden]) {
  display: none !important;
}
@media(min-width:480px) {
  :host {
    flex-direction: row !important;
  }
}

@media(min-width:760px) {
  :host {
    flex-direction: column !important;
  }
}

@media(min-width:1000px) {
  :host {
    flex-direction: row !important;
  }
}

@media(min-width:1300px) {
  :host {
    flex-direction: column !important;
  }
}

@media(min-width:1760px) {
  :host {
    flex-direction: row !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for wrap: "nowrap" 1`] = `
":host {
  display: flex !important;
  flex: auto !important;
  width: auto !important;
  margin-left: calc(clamp(16px, 1.25vw + 12px, 36px) / -2) !important;
  margin-right: calc(clamp(16px, 1.25vw + 12px, 36px) / -2) !important;
  color-scheme: light dark !important;
  flex-direction: row !important;
  flex-wrap: nowrap !important;
}
:host([hidden]) {
  display: none !important;
}"
`;

exports[`getComponentCss() should return correct css for wrap: "wrap" 1`] = `
":host {
  display: flex !important;
  flex: auto !important;
  width: auto !important;
  margin-left: calc(clamp(16px, 1.25vw + 12px, 36px) / -2) !important;
  margin-right: calc(clamp(16px, 1.25vw + 12px, 36px) / -2) !important;
  color-scheme: light dark !important;
  flex-direction: row !important;
  flex-wrap: wrap !important;
}
:host([hidden]) {
  display: none !important;
}"
`;

exports[`getComponentCss() should return correct css for wrap: {"base":"wrap","xs":"nowrap","s":"wrap","m":"nowrap","l":"wrap","xl":"nowrap"} 1`] = `
":host {
  display: flex !important;
  flex: auto !important;
  width: auto !important;
  margin-left: calc(clamp(16px, 1.25vw + 12px, 36px) / -2) !important;
  margin-right: calc(clamp(16px, 1.25vw + 12px, 36px) / -2) !important;
  color-scheme: light dark !important;
  flex-direction: row !important;
  flex-wrap: wrap !important;
}
:host([hidden]) {
  display: none !important;
}
@media(min-width:480px) {
  :host {
    flex-wrap: nowrap !important;
  }
}

@media(min-width:760px) {
  :host {
    flex-wrap: wrap !important;
  }
}

@media(min-width:1000px) {
  :host {
    flex-wrap: nowrap !important;
  }
}

@media(min-width:1300px) {
  :host {
    flex-wrap: wrap !important;
  }
}

@media(min-width:1760px) {
  :host {
    flex-wrap: nowrap !important;
  }
}
"
`;
